--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,5 @@
 <h2>Welcome <%= username %></h2>
+<h2>Welcome <%= usernamet %></h2>
 <p>Scan your personal QR code below (valid 60s)</p>
 <img src="<%= qrImage %>" />
 <br>
